# becamera

./: CMakeLists.txt
becamera/: CMakeLists.txt  becamera.cpp  becamera.h  convert.cpp
include/libavutil/: ffversion.h
lib/: libavutil.so.57  libswresample.so.4.7.100
test/: CMakeLists.txt  becamera_test.cpp  resource.h
